fix(gatsby-theme-kb): the sidebar subdirectory should not collapse when clicking link

--- a/packages/gatsby-theme-kb/src/components/SiteSidebar/site-sidebar.css
+++ b/packages/gatsby-theme-kb/src/components/SiteSidebar/site-sidebar.css
@@ -12,6 +12,7 @@
 
 .site-sidebar__link {
   color: var(--kb-text-color);
+  display: block;
 }
 
 .site-sidebar__link:hover {
